# hickok

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: make_hero.py
src/hickok/: __init__.py  __main__.py  cli.py  console.py  findings.py  handler.py  http.py  payloads.py  session.py  showdown.py  sqlcache.py  sqli.py
src/hickok/art/: banner.txt  hickok.txt
tests/: test_console.py  test_findings.py  test_http.py  test_payloads.py  test_session.py  test_showdown.py  test_sqlcache.py  test_sqli.py  test_sqli_error.py  test_sqli_extract.py
